# wmath.h

./: .gitignore  .gitmodules  README.md  meson.build  wmath.h
.github/workflows/: build-macos.yml  build.yml  format.yml  msvc.yml
test/: math.c  prefix_sum.c  sum.c  test.c  utest.c  zero.c
